--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,8 +67,8 @@ font.source =  "font-src 'self' data: https://ssl.gstatic.com https://www.gstati
 img.source = "img-src 'self' data: localhost:9032 https://ssl.gstatic.com www.gstatic.com https://www.google-analytics.com https://www.googletagmanager.com www.google.com www.google.co.uk"
 style.source = "style-src 'self' localhost:9032 'unsafe-inline' https://tagmanager.google.com https://fonts.googleapis.com"
 frame.source = "frame-src 'self' https://www.googletagmanager.com"
-play.filters.headers.contentSecurityPolicy = ${?script.source} ";"  ${?font.source} ";" ${?img.source} ";" ${?style.source} ";" ${?frame.source}
-
+#play.filters.headers.contentSecurityPolicy = ${?script.source} ";"  ${?font.source} ";" ${?img.source} ";" ${?style.source} ";" ${?frame.source}
+play.filters.enabled += play.filters.csp.CSPFilter
 
 # Router
 # ~~~~~
