--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,13 +19,6 @@ include "frontend.conf"
 
 appName=income-tax-mtd-end-to-end-service-guide
 appUrl="http://"${appName}".local"
-
-# An ApplicationLoader that uses Guice to bootstrap the application.
-play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
-
-# Primary entry point for all HTTP requests on Play applications
-play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
-
 # Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
 # An audit connector must be provided.
 play.modules.enabled += "uk.gov.hmrc.play.audit.AuditModule"
@@ -68,7 +61,7 @@ img.source = "img-src 'self' data: localhost:9032 https://ssl.gstatic.com www.gs
 style.source = "style-src 'self' localhost:9032 'unsafe-inline' https://tagmanager.google.com https://fonts.googleapis.com"
 frame.source = "frame-src 'self' https://www.googletagmanager.com"
 #play.filters.headers.contentSecurityPolicy = ${?script.source} ";"  ${?font.source} ";" ${?img.source} ";" ${?style.source} ";" ${?frame.source}
-play.filters.enabled += play.filters.csp.CSPFilter
+play.filters.enabled = play.filters.csp.CSPFilter
 
 # Router
 # ~~~~~
@@ -82,25 +75,4 @@ play.filters.enabled += play.filters.csp.CSPFilter
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 play.http.router=prod.Routes
 
-# Metrics plugin settings - graphite reporting is configured on a per env basis
-metrics {
-    name = ${appName}
-    rateUnit = SECONDS
-    durationUnit = SECONDS
-    showSamples = true
-    jvm = true
-    enabled = true
-}
-
-
 # Microservice specific config
-
-auditing {
-    enabled=false
-    consumer {
-        baseUri {
-            host = localhost
-            port = 8100
-        }
-    }
-}
