--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,13 @@ jobs:
         run: bundle install
       - name: Build static site
         run: bundle exec middleman build  
+      - name: Check in
+        run: |
+             git config user.name "Github.Action"
+             git config user.email "deliverablestangible@gmail.com"
+             git add .
+             git commit -m "Deploy to GitHub Pages"
+             git push https://${{ secrets.PAT }}@github.com/income-tax-mtd-end-to-end-service-guide.git
 
   Deploy_the_markup_files:
     needs: Build_the_markup_files
