--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   Build_the_markup_files:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v2
         with:
@@ -23,13 +25,11 @@ jobs:
       - name: Build static site
         run: bundle exec middleman build  
       - name: Check in
-        run: |
-             git config user.name "Github.Action"
-             git config user.email "deliverablestangible@gmail.com"
-             git add .
-             git commit -m "Deploy to GitHub Pages"
-             git push https://${{ secrets.PAT }}@github.com/P0C-demo/income-tax-mtd-end-to-end-service-guide.git
-
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit-message: Automated commit
+          branch: main          
+          
   Deploy_the_markup_files:
     needs: Build_the_markup_files
     runs-on: ubuntu-latest
