--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,54 +7,41 @@ on:
       - 'build'
       - .git
 
-
 jobs:
   Build_the_markup_files:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Setup ruby
         uses: ruby/setup-ruby@v1
         with:
+          ruby-version: '3.2.2'
           bundler-cache: true
-      - name: Install ruby dependencies
-        run: bundle install
-      - name: Build static site
-        run: bundle exec middleman build  
-      - name: Check in
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit-message: Automated commit
-          branch: main          
-          
-  Deploy_the_markup_files:
-    needs: Build_the_markup_files
-    runs-on: ubuntu-latest
-    steps:
-       - name: make checkout folder for source
-         run: |
-             mkdir src && cd src   
+      - name: Checkout guide
+        run: |
+             mkdir src && cd src
              git clone https://github.com/P0C-demo/income-tax-mtd-end-to-end-service-guide.git
-       - name: checkout destination
-         run: |
+      - name: Install ruby dependencies
+        run: |
+          cd src/income-tax-mtd-end-to-end-service-guide
+          bundle install
+      - name: Build static site
+        run: |
+             cd src/income-tax-mtd-end-to-end-service-guide
+             bundle exec middleman build
+      - name: checkout destination
+        run: |
              mkdir dest && cd dest
-             git clone https://github.com/P0C-demo/P0C-demo.github.io.git   
-       - name: copy and commit
-         run: |         
-             cp -r src/income-tax-mtd-end-to-end-service-guide/build/*  dest/P0C-demo.github.io/
-       - name: Commit
-         run: |
+             git clone https://github.com/P0C-demo/P0C-demo.github.io.git
+      - name: Retrieve markup files
+        run: |
+             cp -r src/income-tax-mtd-end-to-end-service-guide/build/* dest/P0C-demo.github.io/
+      - name: Commit
+        run: |
              cd dest/P0C-demo.github.io
-             ls
              git config user.name "Github.Action"
              git config user.email "deliverablestangible@gmail.com"
              git add .
              git commit -m "Deploy to GitHub Pages"
-             echo '=>'
-             echo ${{ secrets.PAT }}
-             echo '<='
              git push https://${{ secrets.PAT }}@github.com/P0C-demo/P0C-demo.github.io.git
